--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-install": "^0.6.0",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11"
+  },
+  "dependencies": {
+    "gulp-install": "^0.6.0"
   }
 }
